--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,42 @@ body {
     padding: 40px 35px;
     text-align: center;
 }
+
+.search {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+
+.search i {
+    color: #555;
+    position: absolute;
+    left: 10px;
+}
+
+.search input {
+    border: 0;
+    outline: 0;
+    background: #f1faee;
+    color: #555;
+    padding: 10px 35px;
+    height: 40px;
+    border-radius: 15px;
+    flex: 1;
+    margin-right: 16px;
+    font-size: 18px;
+}
+
+.search button {
+    border: 0;
+    outline: 0;
+    background: #f1faee;
+    border-radius: 15px;
+    width: 90px;
+    height: 30px;
+    cursor: pointer;
+    font-size: 15px;
+}
+
