--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,14 @@ body {
     background: #f1faee;
 }
 
+.heading {
+    color: #003049;
+    text-align: center;
+    margin-top: 20px;
+    font-weight: 900;
+    margin-bottom: 0px;
+}
+
 .card {
     width: 90%;
     max-width: 470px;
@@ -56,6 +64,8 @@ body {
     height: 30px;
     cursor: pointer;
     font-size: 15px;
+    font-weight: bold;
+    color: #555;
 }
 
 .weather-icon {
@@ -93,4 +103,17 @@ body {
 .humidity, .wind {
     font-size: 20px;
     margin-top: -6px;
+}
+
+.weather {
+    display: none;
+}
+
+.error {
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    display: none;
+    font-weight: bold;
 }
